src/syntax/latex/snapshots/texlab__syntax__latex__lexer__tests__asymptote.snap
---
source: src/syntax/latex/lexer.rs
assertion_line: 664
expression: "verify(r#\"\\begin{asy}\n    printf(\"Hello World\\n\");\n\\end{asy}\"#)"
---
[
    (
        BEGIN_ENVIRONMENT_NAME,
        "\\begin",
    ),
    (
        L_CURLY,
        "{",
    ),
    (
        WORD,
        "asy",
    ),
    (
        R_CURLY,
        "}",
    ),
    (
        VERBATIM,
        "\n    printf(\"Hello World\\n\");\n",
    ),
    (
        END_ENVIRONMENT_NAME,
        "\\end",
    ),
    (
        L_CURLY,
        "{",
    ),
    (
        WORD,
        "asy",
    ),
    (
        R_CURLY,
        "}",
    ),
]
