src/syntax/latex/snapshots/texlab__syntax__latex__lexer__tests__command_with_star.snap
---
source: src/syntax/latex/lexer.rs
expression: "verify(r#\"\\section*{Foo}\"#)"

---
[
    (
        SECTION_NAME,
        "\\section*",
    ),
    (
        L_CURLY,
        "{",
    ),
    (
        WORD,
        "Foo",
    ),
    (
        R_CURLY,
        "}",
    ),
]
