src/syntax/latex/snapshots/texlab__syntax__latex__lexer__tests__escape_sequence.snap
---
source: src/syntax/latex/lexer.rs
expression: "verify(r#\"\\% hello\"#)"

---
[
    (
        GENERIC_COMMAND_NAME,
        "\\%",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        WORD,
        "hello",
    ),
]
