src/syntax/latex/snapshots/texlab__syntax__latex__lexer__tests__formula.snap
---
source: src/syntax/latex/lexer.rs
expression: "verify(r#\"$ f(x) = y $$\"#)"

---
[
    (
        DOLLAR,
        "$",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        WORD,
        "f",
    ),
    (
        L_PAREN,
        "(",
    ),
    (
        WORD,
        "x",
    ),
    (
        R_PAREN,
        ")",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUALITY_SIGN,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        WORD,
        "y",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        DOLLAR,
        "$$",
    ),
]
