src/syntax/latex/snapshots/texlab__syntax__latex__lexer__tests__invalid_parameter.snap
---
source: src/syntax/latex/lexer.rs
expression: "verify(r#\"#\"#)"

---
[
    (
        PARAMETER,
        "#",
    ),
]
