src/syntax/latex/snapshots/texlab__syntax__latex__lexer__tests__line_break.snap
---
source: src/syntax/latex/lexer.rs
assertion_line: 258
expression: "verify(\"hello\\nworld\")"

---
[
    (
        WORD,
        "hello",
    ),
    (
        LINE_BREAK,
        "\n",
    ),
    (
        WORD,
        "world",
    ),
]
